specs/018-class-inheritance-members/examples/invalid/readonly-write.ts
class Config {
  readonly version: int;
  constructor(v: int) {
    this.version = v;
  }
  bump(): void {
    this.version = this.version + 1;
  }
}

let c = new Config(1);
console.log(c.version);
